Updated alt attribute of images

--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -15,7 +15,7 @@ keywords: anagh sharma, design, development, designer
 <div class="row ph1 mt5">
   <div class="columns">
     <div class="garage-background pv5">
-      <img class="float-center" src="/assets/images/the-garage-hero.svg"></img>
+      <img class="float-center" src="/assets/images/the-garage-hero.svg" alt="The Garage Logo"/>
     </div>
   </div>
 </div>
