--- a/_pages/room.html
+++ b/_pages/room.html
@@ -14,7 +14,7 @@ keywords: anagh sharma, design, experiment, designer
 </div>
 <div class="row mt6">
     <div class="large-4 medium-4 columns mt3">
-      <img src="/assets/images/the-room-hero.svg"></img>
+      <img src="/assets/images/the-room-hero.svg" alt="Hello from The Design Room"/>
     </div>
     <div class="large-6 large-offset-1 end medium-8 columns mt3">
       <p class="room-text text-justify">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-primary-color">Instagram</a> lately and have been looking to improve this project since then.</p>
@@ -32,37 +32,37 @@ keywords: anagh sharma, design, experiment, designer
     <p class="room-text text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/001-cedarwood-road.jpg"/>
+    <img src="/assets/images/the-design-room/001-cedarwood-road.jpg" alt="Cedarwood Road"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/002-polarize.jpg"/>
+    <img src="/assets/images/the-design-room/002-polarize.jpg" alt="Polarize"/>
   </div>
 </div>
 
 <div class="row">
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/003-adventures-of-a-lifetime.jpg"/>
+    <img src="/assets/images/the-design-room/003-adventures-of-a-lifetime.jpg" alt="Adventures of a Lifetime"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/004-titanium.jpg"/>
+    <img src="/assets/images/the-design-room/004-titanium.jpg" alt="Titanium"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/005-song-for-someone.jpg"/>
+    <img src="/assets/images/the-design-room/005-song-for-someone.jpg" alt="Song for Someone"/>
   </div>
 </div>
 <div class="row">
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/006-rap-god.jpg"/>
+      <img src="/assets/images/the-design-room/006-rap-god.jpg" alt="Rap God"/>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/007-every-tear-is-a-waterfall.jpg"/>
+      <img src="/assets/images/the-design-room/007-every-tear-is-a-waterfall.jpg" alt="Every Tear is a Waterfall"/>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/008-scars-to-your-beautiful.jpg"/>
+      <img src="/assets/images/the-design-room/008-scars-to-your-beautiful.jpg" alt="Scars to Your Beautiful"/>
     </div>
 </div>
 <div class="row mb6">
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/009-love-the-way-you-lie.jpg"/>
+      <img src="/assets/images/the-design-room/009-love-the-way-you-lie.jpg" alt="Love the Way You Lie"/>
     </div>
 </div>
