Updated link for Carol project

--- a/_pages/store.html
+++ b/_pages/store.html
@@ -24,7 +24,7 @@ keywords: store, shop, download
             </div>
             <div class="large-6 medium-6 columns right-collapse small-collapse">
               <div class="carol-store-thumbnail store-product-container square mb2">
-                <a href="https://dribbble.com/shots/3679922-macOS-Lyrics-App" target="_blank" class="cta action-button font-bold">COMING SOON</a>
+                <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="cta action-button font-bold">DOWNLOAD NOW</a>
               </div>
             </div>
           </div>
