Added promote section on homepage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@ keywords: design, portfolio, development, designer
     <a href="{{ site.url }}/about" class="primary quiet font-medium font-primary-color">KNOW MORE ABOUT ME</a>
   </div>
 </div>
+<section id="promote">
+  <div class="row mt6">
+    <div class="columns">
+      <div class="br3" style="background-color:#e62027">
+        <p class="pv3 ph3">I have recently launched Carol, a minimal and beautiful lyrics app for macOS. <a href="{{ site.url }}/store" class="no-decoration-light" style="text-decoration:underline;">Download it from store.</a></p>
+      </div>
+    </div>
+  </div>
+</section>
 <section id="projects" class="mt6">
     <div class="row expanded mt5">
       <div class="portfolio-background mt7 pb4">
