Added social media image for page preview

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Home
 description: I am Anagh Sharma - a Digital Product Designer from New Delhi, India. I design and build digital products people love to use.
+imageurl: /assets/images/sm-previews/pre-home
 keywords: design, portfolio, development, designer
 ---
 
