--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Home
+title: Anagh Sharma - Design & Make
 description: I am Anagh Sharma - a Digital Product Designer from New Delhi, India. I design and build digital products people love to use.
-imageurl: /assets/images/sm-previews/pre-home
+imageurl: assets/images/sm-previews/pre-home
 keywords: design, portfolio, development, designer
 ---
 
