--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Anagh Sharma - Design & Make
 description: I am Anagh Sharma - a Digital Product Designer from New Delhi, India. I design and build digital products people love to use.
-imageurl: assets/images/sm-previews/pre-home
+imageurl: assets/images/sm-previews/pre-home.jpg
 keywords: design, portfolio, development, designer
 ---
 
