--- a/index.html
+++ b/index.html
@@ -112,30 +112,16 @@ keywords: design, portfolio, development, designer
           <a href="{{ site.url }}/blog" class="font-primary-color f6 font-medium ml2" style="vertical-align: center;">SEE ALL</a>
         </div>
         <div class="row">
+          {% for post in site.posts offset:1 limit:3 %}
           <div class="large-4 medium-4 columns mt1">
-            <a href="{{ site.url }}/blog/the-power-of-side-projects/" class="primary no-decoration-light">  
+            <a href="{{ post.url }}" class="primary no-decoration-light">  
               <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold lh-title">The Power of Side Projects</h5>
-                <h6 class="f6 mh3 font-medium font-secondary">MARCH 14, 2017<br>READ TIME - 7m 25s</h6>
+                <h5 class="f4 mh3 font-secondary-bold lh-title">{{ post.title }}</h5>
+                <h6 class="f6 mh3 font-medium font-secondary">{{ post.date | date_to_long_string }}<br>READ TIME - {{ post.read-time }}</h6>
               </div>
             </a>
           </div>
-          <div class="large-4 medium-4 columns mt1">
-            <a href="{{ site.url }}/blog/from-the-pen-of-an-insecure-designer/" class="primary no-decoration-light">  
-              <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold lh-title">From the Pen of an Insecure Designer</h5>
-                <h6 class="f6 mh3 font-medium font-secondary">OCTOBER 07, 2016<br>READ TIME - 2m 34s</h6>
-              </div>
-            </a>
-          </div>
-          <div class="large-4 medium-4 columns mt1">
-            <a href="https://medium.com/@AnaghSharma/from-the-pen-of-an-insecure-designer-5709e2a2254f" class="primary no-decoration-light hide">  
-              <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold lh-title">From the pen of an insecure Designer (?)</h5>
-                <h6 class="f6 mh3 font-medium font-secondary">OCTOBER 13, 2016<br>READ TIME - 2m 34s</h6>
-              </div>
-            </a>
-          </div>
+          {% endfor %}
         </div>
       </div>
       <div class="large-3 middle-3 columns">
