Update meta description of all the pages

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: 404
-description: This is my personal website. Welcome.
+description: I am Anagh Sharma - a Digital Product Designer from New Delhi, India. I design and build digital products people love to use.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: /404.html
 keywords: anagh sharma, design, portfolio, development, designer
 ---
