--- a/_pages/about.html
+++ b/_pages/about.html
@@ -2,6 +2,7 @@
 layout: default
 title: About
 description: About Anagh Sharma, a Designer and Creative from New Delhi, India
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/about/'
 keywords: anagh sharma, design, creative, portfolio, development, designer
 ---
