--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -2,6 +2,7 @@
 layout: default
 title: Blog
 description: Anagh Sharma's Blog - a place to share design and other life experiences
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/blog/'
 keywords: blog, writing, design, experience
 ---
