--- a/_pages/projects/behance.html
+++ b/_pages/projects/behance.html
@@ -2,6 +2,7 @@
 layout: default
 title: View for Behance
 description: View for Behance is a Behance app which is designed and built to offer an enriching and native experience on Windows Phone.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/projects/view-for-behance/'
 keywords: behance, windows, app, phone
 ---
