--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -2,6 +2,7 @@
 layout: default
 title: Personal Identity
 description: Personal identity revolves around building a unique identity of yourself. It depends on the philosophy you follow and the value it creates for the audience. It tells a story about who you are and what you do.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/projects/personal-identity/'
 keywords: branding, identity, design, storytelling
 ---
