--- a/_pages/projects/uber.html
+++ b/_pages/projects/uber.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Uber Infographics
-description: Most of the cars in the metro cities remain unused for most of the time of the day and even when used only one person uses it.
+description: Most of the cars in the metro cities remain unused for most of the time of the day and even when used only one person uses them.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/projects/uber/'
 keywords: uber, infographics, ridesharing, carpooling
 ---
