--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: XBOX App
-description: Re-thinking the XBOX experience on mobile to tackle the foundational flaws
+description: Re-thinking the XBOX experience on mobile to tackle the foundational flaws.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/projects/xbox/'
 keywords: design, xbox, iphone, mobile, app, console
 ---
