--- a/_pages/room.html
+++ b/_pages/room.html
@@ -2,6 +2,7 @@
 layout: default
 title: The Design Room
 description: The Design Room is the place where I experiment with designing things.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/the-design-room/'
 keywords: anagh sharma, design, experiment, designer
 ---
