--- a/_pages/store.html
+++ b/_pages/store.html
@@ -2,6 +2,7 @@
 layout: default
 title: Store
 description: Store is the place where I sell digital stuff.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/store/'
 keywords: store, shop, download
 ---
