--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -2,6 +2,7 @@
 layout: default
 title: The Garage
 description: The Garage is the place where I build things. Welcome to this place if you like to build things.
+imageurl: assets/images/sm-previews/pre-home.jpg
 permalink: '/the-garage/'
 keywords: anagh sharma, design, development, designer
 ---
