Updated XBOX project with Demo video

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -70,7 +70,8 @@ keywords: design, xbox, iphone, mobile, app, console
                 </p>
                 <img src="/assets/images/projects/xbox/cs-first.jpg" class="mt4" alt="Navigation Flow"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
-                <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4" alt="XBOX Logo"/>
+                <!-- <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4" alt="XBOX Logo"/> -->
+                <iframe class="mt4" width="690" height="390" src="https://www.youtube.com/embed/KdE4-YoPzsA?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                 <img src="/assets/images/projects/xbox/cs-third.jpg" class="mt4" alt="App Screens"/>
                 <img src="/assets/images/projects/xbox/cs-fourth.jpg" class="mt4 mb6" alt="App Screens"/>
                 <!-- <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5> -->
