--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@ keywords: design, portfolio, development, designer
 <section id="promote">
   <div class="row mt6">
     <div class="columns">
-      <div class="br3" style="background-color:#e62027">
-        <p class="pv3 ph3">I have recently launched Carol, a minimal and beautiful lyrics app for macOS. <a href="{{ site.url }}/store" class="no-decoration-light" style="text-decoration:underline;">Download it from store.</a></p>
+      <div class="row promote-background br3">
+          <div class="large-8 medium-8 small-12 ph3 pt3 pb4 columns">
+            <p class="mt1 mb0">&#x1F389 &#x1F389 &#x1F389</p>
+            <p class="font-bold font-dark mt2 mb0" style="font-size: 1.1rem;">Carol - a minimal and beautiful lyrics app for macOS</p>
+            <p class="f5 font-dark lh-title mt2 mb4 pr2">I have recently launched Carol - an app that stays in the menu bar of macOS showing lyrics on demand. It supports Apple Music and Spotify.</p>
+            <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="action-button font-bold">DOWNLOAD FOR FREE</a>
+          </div>
+          <div class="large-4 columns show-for-large">
+              <img src="/assets/images/promote-banner.svg" class="float-right" alt="Carol Screenshot"/>
+          </div>
       </div>
     </div>
   </div>
