Added untitled 2 project in The Design Room

--- a/_pages/room.html
+++ b/_pages/room.html
@@ -33,37 +33,60 @@ keywords: anagh sharma, design, experiment, designer
     <p class="room-text text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/001-cedarwood-road.jpg" alt="Cedarwood Road"/>
+    <img src="/assets/images/the-design-room/untitled-1/001-cedarwood-road.jpg" alt="Cedarwood Road"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/002-polarize.jpg" alt="Polarize"/>
+    <img src="/assets/images/the-design-room/untitled-1/002-polarize.jpg" alt="Polarize"/>
   </div>
 </div>
 
 <div class="row">
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/003-adventures-of-a-lifetime.jpg" alt="Adventures of a Lifetime"/>
+    <img src="/assets/images/the-design-room/untitled-1/003-adventures-of-a-lifetime.jpg" alt="Adventures of a Lifetime"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/004-titanium.jpg" alt="Titanium"/>
+    <img src="/assets/images/the-design-room/untitled-1/004-titanium.jpg" alt="Titanium"/>
   </div>
   <div class="large-4 medium-4 columns pb2">
-    <img src="/assets/images/the-design-room/005-song-for-someone.jpg" alt="Song for Someone"/>
+    <img src="/assets/images/the-design-room/untitled-1/005-song-for-someone.jpg" alt="Song for Someone"/>
   </div>
 </div>
 <div class="row">
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/006-rap-god.jpg" alt="Rap God"/>
+      <img src="/assets/images/the-design-room/untitled-1/006-rap-god.jpg" alt="Rap God"/>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/007-every-tear-is-a-waterfall.jpg" alt="Every Tear is a Waterfall"/>
+      <img src="/assets/images/the-design-room/untitled-1/007-every-tear-is-a-waterfall.jpg" alt="Every Tear is a Waterfall"/>
     </div>
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/008-scars-to-your-beautiful.jpg" alt="Scars to Your Beautiful"/>
+      <img src="/assets/images/the-design-room/untitled-1/008-scars-to-your-beautiful.jpg" alt="Scars to Your Beautiful"/>
     </div>
 </div>
 <div class="row mb6">
     <div class="large-4 medium-4 columns pb2">
-      <img src="/assets/images/the-design-room/009-love-the-way-you-lie.jpg" alt="Love the Way You Lie"/>
+      <img src="/assets/images/the-design-room/untitled-1/009-love-the-way-you-lie.jpg" alt="Love the Way You Lie"/>
     </div>
+</div>
+
+<div class="row mt6">
+    <div class="columns">
+      <h6 class="font-medium font-secondary">Untitled 2 Project</h6>
+    </div>
+  </div>
+  
+  <div class="row mt3">
+    <div class="large-4 medium-4 columns pb2">
+      <p class="room-text text-justify pr5">Tried my hands at a publication campaign to raise money for global disaster relief. The theme was - “The Spirit of making our world a better place” - in wake of all the calamities humanity faced in 2017.</p>
+    </div>
+    <div class="large-4 medium-4 columns pb2">
+      <img src="/assets/images/the-design-room/untitled-2/01-stronger.png" alt="Stronger"/>
+    </div>
+    <div class="large-4 medium-4 columns pb2">
+      <img src="/assets/images/the-design-room/untitled-2/02-better.png" alt="Better"/>
+    </div>
+</div>
+<div class="row mb6">
+      <div class="large-4 medium-4 columns pb2">
+        <img src="/assets/images/the-design-room/untitled-2/03-together.png" alt="Together"/>
+      </div>
 </div>
