--- a/_pages/store.html
+++ b/_pages/store.html
@@ -31,8 +31,8 @@ keywords: store, shop, download
           </div>
           <div class="row">
             <div class="columns left-collapse right-collapse small-collapse">
-                <div class="wallpapers-store-thumbnail store-product-container horizontal-rect-8 mb2">
-                    <a href="" target="_blank" style="position:absolute; left: 5%; margin: auto; bottom: 9%;" class="action-button font-bold">COMING SOON</a>
+                <div class="ambar-store-thumbnail store-product-container horizontal-rect-8 mb2">
+                    <a href="https://github.com/AnaghSharma/Ambar" target="_blank" style="position:absolute; left: 5%; margin: auto; bottom: 9%;" class="action-button font-bold">DOWNLOAD NOW</a>
                 </div>
             </div>
           </div>
