Updated about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -32,10 +32,10 @@ keywords: anagh sharma, design, creative, portfolio, development, designer
     <h6 class="font-bold font-secondary quiet mt4 mb3">STILL HERE?</h6>
     <ul>
       <li>I really like Video Games - to explore how much creative humans can get.</li>
-      <li class="mv1">Have played Grand Theft Auto series uncountable times.</li>
-      <li>A shoe dog with an eye for sophisticated shoes especially Nike and Adidas Originals. Currently rocking Nike Free Runner 2016 and Adidas Originals NMD R1 - both of them simple and beautiful.</li>
+      <li class="mv1">Have played Grand Theft Auto series uncountable times. Been exploring platformers from last couple of years - Limbo, Inside, Trine, Ori and the Blind Forest, Valiant Hearts, Never Alone, etc.</li>
+      <li>A sneaker head, currently rocking Nike SF Air Force 1, Nike Free Runner 2016 and Adidas Originals NMD R1.</li>
       <li class="mv1">Everyday listening to Linkin Park, U2, Coldplay, One Republic, Twenty One Pilots, The Weeknd and The Chain Gangs of 1974.</li>
-      <li>Currently reading “The Everything Store: Jeff Bezos and the Age of Amazon” and trying to delve deep into Motion Design.</li>
+      <li>Currently reading “Deep Work” by Cal Newport and trying to delve deep into Motion Design.</li>
     </ul>
   </div>
 </div>
