--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ keywords: design, portfolio, development, designer
         <div class="row pb5">
           <div class="large-6 medium-6 small-12 columns">
             <h6 class="font-dark font-bold font-secondary quiet">HAPPY. PEOPLE</h6>
-            <p class="font-dark mt5" style="margin-bottom: 6rem;">I have designed &amp; built a variety of products which have been downloaded more than 4 Million times. These products have an average rating of 4+ stars.<br><br>My work has also received several noteworthy mentions on various internet media such as Gizmodo, Microsoft, Nokia and others.</p>
+            <p class="font-dark mt5" style="margin-bottom: 6rem;">I have designed &amp; built a variety of products which have been downloaded <strong>more than 4 Million times</strong>. These products have an average rating of <strong>4+ stars.</strong><br><br>My work has also received several noteworthy mentions on various internet media such as <strong>Gizmodo, Microsoft, Nokia</strong> and others.</p>
             <a href="{{ site.url }}/store" class="action-button font-bold">DOWNLOAD APPS</a>
           </div>
           <div class="large-3 medium-4 columns sidebar mr1 pt4 pb3 pl3 pr4">
