Updated dependencies and about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -34,7 +34,8 @@ keywords: anagh sharma, design, creative, portfolio, development, designer
       <li>I really like Video Games - to explore how much creative humans can get.</li>
       <li class="mv1">Have played Grand Theft Auto series uncountable times. Been exploring platformers from last couple of years - Limbo, Inside, Trine, Ori and the Blind Forest, Valiant Hearts, Never Alone, etc.</li>
       <li>A sneaker head, currently rocking Nike SF Air Force 1, Nike Free Runner 2016 and Adidas Originals NMD R1.</li>
-      <li class="mv1">Everyday listening to Linkin Park, U2, Coldplay, One Republic, Twenty One Pilots, The Weeknd and The Chain Gangs of 1974.</li>
+      <li class="mv1">Everyday listening to Linkin Park, U2, Coldplay, One Republic, Eminem, Twenty One Pilots, The Weeknd and The Chain Gangs of 1974.</li>
+      <li>Trying to get back into drawing and learning calligraphy as well.</li>
       <li>Currently reading “Deep Work” by Cal Newport and trying to delve deep into Motion Design.</li>
     </ul>
   </div>
