Added handling different UI states to the garage

--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -34,7 +34,7 @@ keywords: anagh sharma, design, development, designer
         <div class="row">
             <ul class="no-bullet">
               <li class="blog-list mv3 pv3 ph3">
-                <a href="" class="heading font-content font-secondary-bold f4 lh-title">Building a native macOS Lyrics app using Musixmatch API</a>
+                <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-content font-secondary-bold f4 lh-title">Handling different UI states with a single ViewController</a>
               </li>
               <li class="blog-list mv3 pv3 ph3">
                 <a href="{{ site.url }}/blog/switching-to-jekyll-and-github-pages/" class="heading font-content font-secondary-bold f4 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
