--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ keywords: design, portfolio, development, designer
           <h6 class="mt3 f6 font-bold font-secondary">LATEST COOKIES</h6>
         <ul class="no-bullet">
           <li class="blog-list mv3 pv2 ph3">
-            <a href="https://github.com/AnaghSharma/Carol" class="heading font-content font-secondary-bold f5 lh-title">Building a native macOS Lyrics app using Musixmatch API</a>
+            <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-content font-secondary-bold f5 lh-title">Handling different UI states with a single ViewController</a>
           </li>
           <li class="blog-list mv3 pv2 ph3">
             <a href="{{ site.url }}/blog/switching-to-jekyll-and-github-pages/" class="heading font-content font-secondary-bold f5 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
