Updated garage section intro text

--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -23,7 +23,7 @@ keywords: anagh sharma, design, development, designer
 <div class="row mt5">
   <div class="large-6 medium-6 small-12 columns mt4">
     <h6 class="font-bold font-secondary quiet">MAKING THINGS</h6>
-    <p class="mt3">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development.</p>
+    <p class="mt3">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From past couple of months, I am having fun with front-end development and Swift programming language. Occasionally I write about that fun part. </p>
   </div>
 </div>
 <div class="row mt3 mb6">
