--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ keywords: design, portfolio, development, designer
     </div>
     <div class="row mt5">
       <div class="large-6 medium-6 columns mb5">
-        <p class="text-justify mt3 pb5">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
+        <p class="text-justify mt3 pb5">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From past couple of months, I am having fun with front-end development and Swift programming language.</p>
         <a href="{{ site.url }}/the-garage" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
       </div>
       <div class="large-4 medium-5 columns">
