Update promotion banner

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@ keywords: design, portfolio, development, designer
 <section id="promote">
   <div class="row mt6">
     <div class="columns">
-      <div class="row promote-background br3">
-          <div class="large-8 medium-8 small-12 ph3 pt3 pb4 columns">
+      <div class="row promote-background br4 right-collapse">
+          <div class="large-8 medium-8 small-12 ph3 pv3 columns">
             <p class="mt1 mb0">&#x1F389 &#x1F389 &#x1F389</p>
-            <p class="font-bold font-dark mt2 mb0" style="font-size: 1.1rem;">Carol - a minimal and beautiful lyrics app for macOS</p>
-            <p class="f5 font-dark lh-title mt2 mb4 pr2">I have recently launched Carol - an app that stays in the menu bar of macOS showing lyrics on demand. It supports Apple Music and Spotify.</p>
-            <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="action-button font-bold">DOWNLOAD FOR FREE</a>
+            <p class="font-medium mt3 mb0" style="font-size: 1.1rem;">3 Dribbble Invites</p>
+            <p class="f5 lh-title mt2 mb4 pr2">I have 3 Dribbble invites for interested folks. Hit me up on Twitter or email and share some of your awesome work to be drafted as a player.</p>
+            <ul class="social-icons ml0 mt4">
+              <li><a href="{{ site.email }}" class="social-icon"> <i class="fa fa-envelope fa-lg br8" style="font-size: 1.1em; background-color: black; color: white"></i></a></li>
+              <li><a href="{{ site.twitter }}" target="_blank" class="social-icon mh1"> <i class="fa fa-twitter fa-lg br8" style="font-size: 1.2em; background-color: black; color: white"></i></a></li>
+            </ul> 
           </div>
-          <div class="large-4 columns show-for-large">
-              <img src="/assets/images/promote-banner.svg" class="float-right" alt="Carol Screenshot"/>
+          <div class="large-4 columns show-for-large pr0 pt5"> 
+              <img src="/assets/images/promote-banner.svg" style="opacity: 0.6" class="float-right" alt="Dribbble Invites"/>
           </div>
       </div>
     </div>
