Updated icon button

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ keywords: design, portfolio, development, designer
             <p class="font-medium mt3 mb0" style="font-size: 1.1rem;">3 Dribbble Invites</p>
             <p class="f5 lh-title mt2 mb4 pr2">I have 3 Dribbble invites for interested folks. Hit me up on Twitter or email and share some of your awesome work to be drafted as a player.</p>
             <ul class="social-icons ml0 mt4">
-              <li><a href="{{ site.email }}" class="social-icon"> <i class="fa fa-envelope fa-lg br8" style="font-size: 1.1em; background-color: black; color: white"></i></a></li>
-              <li><a href="{{ site.twitter }}" target="_blank" class="social-icon mh1"> <i class="fa fa-twitter fa-lg br8" style="font-size: 1.2em; background-color: black; color: white"></i></a></li>
+              <li><a href="{{ site.email }}"> <i class="fa fa-envelope icon-button-dark br8"></i></a></li>
+              <li><a href="{{ site.twitter }}" target="_blank"> <i class="fa fa-twitter icon-button-dark br8" style="font-size: 1.2em; background-color: black; color: white"></i></a></li>
             </ul> 
           </div>
           <div class="large-4 columns show-for-large pr0 pt5"> 
