--- a/_pages/about.html
+++ b/_pages/about.html
@@ -20,9 +20,9 @@ keywords: anagh sharma, design, creative, portfolio, development, designer
   <div class="large-7 medium-8 columns ph3">
     <p class="hero-text text-justify">I am <strong>Anagh Sharma</strong>, a Designer and Creative born and currently based in New Delhi, India. I have been doing Digital Product Design from last couple of years with a strong focus on making. Since then I have successfully <strong>designed, built and published</strong> several products including <strong>mobile apps and websites.</strong><br><br>I have always believed in the idea of making which powers me to bring my ideas to life. There have been many products in which I have worked from the nascent stage until the release day which resulted in kick-ass products. Those products have been loved by millions of people and have been featured by Microsoft, Nokia, Gizmodo and many more internet media.<br><br>I am always ready and eager to solve problems that I encounter everyday be it detecting the colour and hence the type of bus (AC/Non AC) in the dark or letting people know the probability of a crime at their locations at a given time. If you are trying to solve our day-to-day problems and want a helping hand, reach out to me at - </p>
     <ul class="social-icons ml0 mt4">
-      <li><a href="{{ site.email }}" class="social-icon"> <i class="fa fa-envelope fa-lg"></i></a></li>
-      <li><a href="{{ site.twitter }}" class="social-icon mh1"> <i class="fa fa-twitter fa-lg"></i></a></li>
-      <li><a href="{{ site.facebook }}" class="social-icon"> <i class="fa fa-facebook fa-lg"></i></a></li>
+      <li><a href="{{ site.email }}"> <i class="fa fa-envelope icon-button-light br3"></i></a></li>
+      <li><a href="{{ site.twitter }}"> <i class="fa fa-twitter icon-button-light br3"></i></a></li>
+      <li><a href="{{ site.facebook }}"> <i class="fa fa-facebook icon-button-light br3"></i></a></li>
     </ul>
   </div>
 </div>
