Fixed icon buttons

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -19,11 +19,37 @@ keywords: anagh sharma, design, creative, portfolio, development, designer
   </div>
   <div class="large-7 medium-8 columns ph3">
     <p class="hero-text text-justify">I am <strong>Anagh Sharma</strong>, a Designer and Creative born and currently based in New Delhi, India. I have been doing Digital Product Design from last couple of years with a strong focus on making. Since then I have successfully <strong>designed, built and published</strong> several products including <strong>mobile apps and websites.</strong><br><br>I have always believed in the idea of making which powers me to bring my ideas to life. There have been many products in which I have worked from the nascent stage until the release day which resulted in kick-ass products. Those products have been loved by millions of people and have been featured by Microsoft, Nokia, Gizmodo and many more internet media.<br><br>I am always ready and eager to solve problems that I encounter everyday be it detecting the colour and hence the type of bus (AC/Non AC) in the dark or letting people know the probability of a crime at their locations at a given time. If you are trying to solve our day-to-day problems and want a helping hand, reach out to me at - </p>
-    <ul class="social-icons ml0 mt4">
-      <li><a href="{{ site.email }}"> <i class="fa fa-envelope icon-button-light br3"></i></a></li>
-      <li><a href="{{ site.twitter }}"> <i class="fa fa-twitter icon-button-light br3"></i></a></li>
-      <li><a href="{{ site.facebook }}"> <i class="fa fa-facebook icon-button-light br3"></i></a></li>
-    </ul>
+    <ul class="inline-list ml0 mt4">
+        <li>
+          <a href="{{ site.email }}" class="icon-button button-light br3">
+            <svg width="18px" height="14px" viewBox="0 0 18 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <defs></defs>
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g id="Home" transform="translate(-236.000000, -812.000000)" fill="#000000" fill-rule="nonzero">
+                      <g id="Email" transform="translate(235.000000, 809.000000)">
+                          <path d="M17.2,3 L2.8,3 C1.81,3 1.009,3.7875 1.009,4.75 L1,15.25 C1,16.2125 1.81,17 2.8,17 L17.2,17 C18.19,17 19,16.2125 19,15.25 L19,4.75 C19,3.7875 18.19,3 17.2,3 Z M17.2,6.5 L10,10.875 L2.8,6.5 L2.8,4.75 L10,9.125 L17.2,4.75 L17.2,6.5 Z" id="email_icon"></path>
+                      </g>
+                  </g>
+              </g>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="{{ site.twitter }}" target="_blank" class="icon-button button-light br3">
+            <svg width="20px" height="16px" viewBox="0 0 20 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <defs></defs>
+              <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g id="Home" transform="translate(-296.000000, -811.000000)">
+                      <g id="Twitter" transform="translate(296.000000, 809.000000)">
+                          <rect id="Bounds" x="0" y="0" width="20" height="20"></rect>
+                          <path d="M19.862069,3.894 C19.1203552,4.22056266 18.3311541,4.43506346 17.522069,4.53 C18.3787282,4.01885226 19.015141,3.22534499 19.3137931,2.296 C18.5162335,2.76537853 17.6400562,3.09661378 16.7246897,3.2748 C15.9835862,2.49 14.9238621,2 13.7507586,2 C11.5017931,2 9.67737931,3.8084 9.67737931,6.0392 C9.67737931,6.3556 9.71255172,6.6632 9.78248276,6.9592 C6.39558621,6.79 3.39351724,5.184 1.38248276,2.7372 C1.01973762,3.35722164 0.829812425,4.05769198 0.831310345,4.77 C0.831310345,6.1708 1.55048276,7.4072 2.64372414,8.132 C1.99509639,8.11125496 1.36142719,7.93828117 0.79737931,7.628 L0.79737931,7.6776 C0.79737931,9.6352 2.2022069,11.2684 4.06758621,11.638 C3.71829524,11.7337283 3.35684856,11.7816611 2.9937931,11.7804 C2.73144828,11.7804 2.47489655,11.756 2.22662069,11.7084 C2.74551724,13.3124 4.24924138,14.4812 6.03310345,14.5124 C4.63862069,15.5964 2.88082759,16.2424 0.972413793,16.2424 C0.643448276,16.2424 0.31862069,16.2236 0,16.1868 C1.80372414,17.3308 3.94634483,18 6.24662069,18 C13.7424828,18 17.8406897,11.846 17.8406897,6.508 C17.8406897,6.3324 17.8369655,6.1568 17.829931,5.9848 C18.6308383,5.41055108 19.3190514,4.7024712 19.862069,3.894" id="twitter_icon" fill="#000000" fill-rule="nonzero"></path>
+                      </g>
+                  </g>
+              </g>
+            </svg>
+          </a>
+        </li>
+      </ul>
   </div>
 </div>
 <div class="row mb6">
