Added Carol illustrations to The Design Room

--- a/_pages/room.html
+++ b/_pages/room.html
@@ -90,3 +90,33 @@ keywords: anagh sharma, design, experiment, designer
         <img src="/assets/images/the-design-room/untitled-2/03-together.png" alt="Together"/>
       </div>
 </div>
+
+<div class="row mt6">
+  <div class="columns">
+    <h6 class="font-medium font-secondary">Carol - Illustrations</h6>
+  </div>
+</div>
+
+<div class="row mt3">
+  <div class="large-4 medium-4 columns pb2">
+      <p class="room-text text-justify pr5">Illustrations for different UI states in <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="font-primary-color">Carol</a> - a minimal and beautiful lyrics app for macOS. Since the theme of app is dark, the challenge was to create a consistent style for the illustrations.</p>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/carol-illustrations/001-no-music.jpg" alt="No music playing"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/carol-illustrations/002-no-app.jpg" alt="No music app running"/>
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/carol-illustrations/003-two-songs.jpg" alt="Playing two songs at a time"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/carol-illustrations/004-not-found.jpg" alt="Lyrics not found"/>
+  </div>
+  <div class="large-4 medium-4 columns pb2">
+    <img src="/assets/images/the-design-room/carol-illustrations/005-no-internet.jpg" alt="No internet connection"/>
+  </div>
+</div>
