Fixed typo in Featured Sidebar

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ keywords: design, portfolio, development, designer
               </li>
               <li class="mt2 mb3">
                 <h6 class="quiet font-medium font-secondary mb0">MICROSOFT</h6>
-                <a href="" target="_blank" class="f6 disabled">Featured in Windows Store more than 100 times in 100+ countries.</a>
+                <a href="" target="_blank" class="f6 disabled">Featured in Windows Store for more than 100 times in 100+ countries.</a>
               </li>
             </ul>
           </div>
