Added Carol project draft

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ keywords: design, portfolio, development, designer
                 </a>
               </div>
               <div class="large-6 medium-6 columns right-collapse">
-                <a href="https://www.behance.net/gallery/24517349/BuildmLearn-App-Store-on-Windows-Phone-Concept" class="heading">
-                  <div class="portfolio-project-card square buildmlearn-thumbnail mb2">
+                <a href="{{ site.url }}/projects/carol" class="heading">
+                  <div class="portfolio-project-card square mb2">
                   </div>
                 </a>
               </div>
