--- a/_pages/projects/behance.html
+++ b/_pages/projects/behance.html
@@ -26,10 +26,9 @@ keywords: behance, windows, app, phone
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 16.5rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 14.5rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
-                    <li class="pv1 font-dark">Story</li>
                     <li class="pv1 font-dark">Problem</li>
                     <li class="pv1 font-dark">Research</li>
                     <li class="pv1 font-dark">IA</li>
@@ -41,7 +40,7 @@ keywords: behance, windows, app, phone
             <div class="large-7 medium-7 end columns">
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
                 <p class="text-justify font-dark lh-copy mt4"><a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="font-primary-color">View for Behance</a> is a Behance app which is designed and built to offer an enriching and native experience on Windows Phone. It was conceptualised and developed for lack of an official native app for Windows Phone.</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Story</h5>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
                 <p class="text-justify font-dark lh-copy mt4">It was April 2014 and I was a Windows Phone user back then. I always found it cumbersome to browse Behance on my device. There was (is) no official app in the Store nor there were any good third party alternatives. Browsing Behance on Internet Explorer was not a good way either (It was slow, believe me). There was not a single app which could provide a native experience. Internet Explorer was all you could use to browse Behance, but it was a slow and frustrating experience.</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
                 <p class="text-justify font-dark lh-copy mt4">I set out with this goal in mind - Designing an app which would help users in their Behance browsing experience on Windows Phone. I started my research with competitive audit. Since there were no good third party alternatives in Windows Phone Store then, I tried Google Play Store and iOS App Store. There were some apps built using the official Behance API, but none of them were providing exclusive features to their users. Apart from the usual Behance experience, none of them was offering something truly unique which could enhance the Behance browsing experience. I knew that all I wanted was to a seamless Behance experience on Windows Phone, but then I did not want to add another brick in the wall. If I am going to design an app, I am going to do it better by aiding the users in achieving their goals. Only then I can compete with other apps in the future. <br><br>I checked the official Behance API page to explore what is currently being offered. Almost everything you could do on Behance website like uploading a project, appreciating a project, following creatives, etc. was there in the API. Although after a few days, the endpoint for login was nowhere to be found. When I asked the support, they said that they were transitioning to Adobe ID and I would have to use Adobe’s Creative SDK for implementing login. Unfortunately that SDK is only available for iOS, Android and Web. The only limit I could find was the number of API request calls which were 150 per hour against a user device (which I thought was a no big deal).</p>
