Added research section in Carol project

--- a/_pages/projects/carol.html
+++ b/_pages/projects/carol.html
@@ -43,9 +43,21 @@ keywords: music, lyrics, app, macOS, spotify, itunes
                 <h5 class="font-dark font-secondary-bold font-content mt5">Role</h5>
                 <p class="text-justify font-dark lh-copy mt4">Product Designer, Developer and Illustrator</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
-                <p class="text-justify font-dark lh-copy mt4"></p>
+                <p class="text-justify font-dark lh-copy mt4">I am a huge music buff and often find myself heading to <a href="https://www.musixmatch.com" target="_blank" class="font-primary-color">Musixmatch</a> and <a href="https://www.genius.com" target="_blank" class="font-primary-color">Genius</a> for my lyrics appetite. While designing, I don’t want to open a new tab in my browser, head to Musixmatch or Genius if I want to look up for lyrics of a track every time. It’s a tedious effort which I always try to avoid. If you want to have a quick look of the lyrics without interrupting your flow, good luck with that. iTunes have the option to show lyrics but then again you will have to not only open the app but also click twice further to view the lyrics. Something which you would not like to do every time. Earlier, Spotify also used to have the same feature to show lyrics as the track progressed. Musixmatch also released a full fledged desktop app for lyrics. I tried it to find out that it is slow and only works as a window app. So for most of the options present, typical flow looks something like this - </p>
+                <img src="/assets/images/projects/carol/" alt="Current flow to get lyrics"/>
+                <p class="text-justify font-dark lh-copy mt4">I looked for alternatives only to find that there were none that matched my preferences. Most of them were having the interface from pre macOS Yosemite era. It was then I decided to build one for myself. The proposed solution -</p>
+                <img src="/assets/images/projects/carol/" alt="Ideas flow to get lyrics"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
-                <p class="text-justify font-dark lh-copy mt4"></p>
+                <p class="text-justify font-dark lh-copy mt4">The vision was to have a way to get lyrics of a song without interrupting your workflow. I started with exploring the competitive products to gather information about what they are offering and what not. The number of such products was less than I expected so I knew I could not rely heavily on this process. As mentioned earlier, most of them were not updated for years. The one from Musixmatch had no menu bar support which I assumed is crucial for having an uninterrupted experience.<br><br>Apart from this I asked some people a couple of questions -
+                  <ol class="font-dark text-justify lh-copy mb4">
+                    <li class="mv2">How often they listen to music per day / week / month?</li>
+                    <li class="mv2">Whether they use any stream music service or not?</li>
+                    <li class="mv2">How often they look up lyrics of a song?</li>
+                    <li class="mv2">What lyrics services i.e. Musixmatch, Genius, iTunes or any other do they use?</li>
+                    <li class="mv2">How do they use these services - Mobile Apps, Desktop Apps, Web?</li>
+                    <li class="mv2">Do they feel some kind of interruption in accessing these services?</li>
+                  </ol>
+                </p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Wireframes</h5>
                 <p class="text-justify font-dark lh-copy mt4"></p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
