--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ keywords: design, portfolio, development, designer
             </div>
             <div class="row">
               <div class="large-6 medium-6 small-12 columns left-collapse">
-                <a href="{{ site.url }}/projects/xbox" class="heading">
-                  <div class="portfolio-project-card square xbox-thumbnail mb2">
+                <a href="{{ site.url }}/projects/carol" class="heading">
+                  <div class="portfolio-project-card square carol-thumbnail mb2">
                   </div>
                 </a>
               </div>
               <div class="large-6 medium-6 columns right-collapse">
-                <a href="{{ site.url }}/projects/carol" class="heading">
-                  <div class="portfolio-project-card square mb2">
+                <a href="{{ site.url }}/projects/xbox" class="heading">
+                  <div class="portfolio-project-card square xbox-thumbnail mb2">
                   </div>
                 </a>
               </div>
