Added wireframes section in Carol project

--- a/_pages/projects/carol.html
+++ b/_pages/projects/carol.html
@@ -60,7 +60,31 @@ keywords: music, lyrics, app, macOS, spotify, itunes
                   </ol>
                 </p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Wireframes</h5>
-                <p class="text-justify font-dark lh-copy mt4"></p>
+                <h6 class="font-dark font-medium mt5">Iteration 1</h6>
+                <img class="mt3" src="/assets/images/projects/carol/cs-third.jpg" alt="Wireframe 1"/>
+                <p class="text-justify font-dark lh-copy mt4">Did not work because - 
+                  <ol class="font-dark text-justify lh-copy mb4">
+                    <li>It wasn’t technically possible and only a line could be read properly at a given time.</li>
+                    <li>The colour of bottom information bar depended on the artwork which could have caused contrast problems.</li>
+                  </ol>
+                </p>
+                <h6 class="font-dark font-medium mt5">Iteration 2</h6>
+                <img class="mt3" src="/assets/images/projects/carol/cs-fourth.jpg" alt="Wireframe 2"/>
+                <p class="text-justify font-dark lh-copy mt4">This iteration actually went through development. It had a couple of problems - 
+                  <ol class="font-dark text-justify lh-copy mb4">
+                    <li>Legibility issue.</li>
+                    <li>No option to hide the artwork which might interfere with the text and create poor contrast.</li>
+                  </ol>
+                </p>
+                <h6 class="font-dark font-medium mt5">Iteration 3</h6>
+                <img class="mt3" src="/assets/images/projects/carol/cs-fifth.jpg" alt="Wireframe 3"/>
+                <p class="text-justify font-dark lh-copy mt4">This is the final iteration -
+                  <ol class="font-dark text-justify lh-copy mb4">
+                    <li>Better contrast irrespective of the background album artwork as the text container is dark.</li>
+                    <li>Option to change type size for better legibility.</li>
+                    <li>Meta information display such as Explicit tag, etc.</li>
+                  </ol>
+                </p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
                 <p class="text-justify font-dark lh-copy mt4"></p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Learnings</h5>
