--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -85,6 +85,26 @@ keywords: branding, identity, design, storytelling
                 <img src="/assets/images/projects/identity/cs-fifth.jpg" alt="Anagh Sharma typeface demonstration"/>
                 <h6 class="font-dark font-medium mt5">Other Components</h6>
                 <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Learnings</h5>
+                <p class="text-justify font-dark lh-copy mt4">
+                  <ol class="font-dark text-justify lh-copy mb4">
+                    <li class="mv2 font-medium">Perfecting things
+                      <p class="font-normal">I wasted a lot of time perfecting things and realised that this project won't ever face completion this way. I even penned an article - <a class="font-primary-color" href="{{ site.url }}/blog/the-whirlpool-of-perfection/">The Whirlpool of Perfection</a>, regarding this dreadful situation.</p>
+                    </li>
+                    <li class="mv2 font-medium">Working on things which did not matter
+                      <p class="font-normal">I also worked on print materials regarding the personal branding instead of focusing on its digital part only.</p>
+                    </li>
+                    <li class="mv2 font-medium">Promotional Banner did not work
+                      <p class="font-normal">I put on a promotional banner on the home page to show all the latest highlights of what I am currently doing. It did not work out. Users coming to the website hardly interacted with it.</p> 
+                    </li>
+                    <li class="mv2 font-medium">Writing as part of identity did not work out?
+                      <p class="font-normal">I still do not know if the articles that I had written are helpful to anyone or not. I am looking for a way to make them somewhat engaging.</p> 
+                    </li>
+                    <li class="mv2 font-medium">The About Page
+                      <p class="font-normal">About section is the second most visited page of this website and it's not that good.</p> 
+                    </li>
+                  </ol>
+                </p>
                 <h5 class="font-dark font-content font-secondary text-center mv5">That's all folks</h5>
             </div>
         </div> 
