Updated role, visual design & learnings for XBOX project

--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -25,13 +25,15 @@ keywords: branding, identity, design, storytelling
           </div>
         </div>
         <div class="row">
-            <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 8.25rem;"></div>
+            <div class="large-3 medium-3 small-collapsed columns mb4">
+                <div class="content-table-bar" style="display: inline-block; height: 12.25rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
+                    <li class="pv1 font-dark">Role</li>
                     <li class="pv1 font-dark">Story</li>
                     <li class="pv1 font-dark">Problem</li>
                     <li class="pv1 font-dark">Process</li>
+                    <li class="pv1 font-dark">Learnings</li>
                 </ul>
             </div>
             <div class="large-7 medium-7 end columns">
